--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -16,203 +15,174 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
+
 body {
-	line-height: 1;
+  line-height: 1;
+  max-width: 1140px;
+  margin: auto;
+  font-family: "Work Sans";
+  font-size: 14px;
 }
-ol, ul {
-	list-style: none;
+body header {
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
 }
-blockquote, q {
-	quotes: none;
+body section {
+  margin: 50px 0;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+body h1 {
+  display: flex;
+  flex-direction: column;
+  font-family: "Syne";
+  font-size: 22px;
+  font-weight: 800;
+  color: #B1663C;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+body h1 > span {
+  font-family: "Work Sans";
+  font-size: 10px;
+  letter-spacing: 0.1em;
 }
-/** end reset css**/
-body {
-	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
-	font-size: 14px;
+body h2 {
+  font-family: "Syne";
+  font-weight: 700;
+  font-size: 30px;
+  color: #1D6154;
 }
-header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
+body nav ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
-section {
-	margin: 50px 0
+body nav li {
+  padding: 0 10px;
+  font-size: 1.2em;
 }
-
-h1{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Syne';
-	font-size: 22px;
-	font-weight: 800;
-	color: #B1663C
+body nav li:hover {
+  color: #B1663C;
 }
-
-h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
-;
+body #introduction {
+  display: flex;
+  align-items: center;
 }
-
-h2{
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 30px;
-	color: #1D6154
+body #introduction figure {
+  flex: 1;
 }
-nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+body #introduction img {
+  display: block;
+  margin: auto;
+  width: 80%;
 }
-nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+body #introduction article {
+  flex: 1;
 }
-
-li:hover {
-	color: #B1663C;
+body #introduction h2 {
+  margin-bottom: 1em;
 }
-#introduction {
-	display: flex;
-	align-items: center;
+body #introduction p {
+  margin-bottom: 0.5em;
 }
-#introduction figure {
-	flex: 1
+body #portfolio h2 {
+  text-align: center;
+  margin-bottom: 1em;
 }
-#introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+body #portfolio .filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-
-#introduction article {
-	flex: 1
+body #portfolio .filtersbutton {
+  background-color: white;
+  color: #1D6154;
+  border-color: #1D6154;
+  border-radius: 60px;
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  margin: 10px;
+  height: 40px;
+  min-width: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
-#introduction h2 {
-	margin-bottom: 1em;
+body #portfolio .filtersbutton:hover {
+  background-color: #1D6154;
+  color: white;
+  cursor: pointer;
 }
-
-#introduction p {
-	margin-bottom: 0.5em;
+body #portfolio .gallery {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
-#portfolio h2 {
-	text-align: center;
-	margin-bottom: 1em;
+body #portfolio .gallery img {
+  width: 100%;
 }
-
-.filters {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+body #contact {
+  width: 50%;
+  margin: auto;
 }
-
-.filtersbutton {
-    background-color: white;
-    color: #1D6154;
-    border-color: #1D6154;
-    border-radius: 60px;
-    font-family: 'Syne';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    margin: 10px;
-    height: 40px;
-    min-width: 100px;
-    padding-left: 10px;
-    padding-right: 10px;
+body #contact > * {
+  text-align: center;
 }
-
-.filtersbutton:hover {
-    background-color: #1D6154;
-    color: white;
-    cursor: pointer;
+body #contact h2 {
+  margin-bottom: 20px;
 }
-.gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+body #contact form {
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
-
-.gallery img {
-	width: 100%;
-
+body #contact form input {
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact {
-	width: 50%;
-margin: auto;
+body #contact form label {
+  margin: 2em 0 1em 0;
 }
-#contact > * {
-	text-align: center;
-
+body #contact form textarea {
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact h2{
-	margin-bottom: 20px;
+body #contact form input[type=submit] {
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  background-color: #1D6154;
+  margin: 2em auto;
+  width: 180px;
+  text-align: center;
+  border-radius: 60px;
 }
-#contact form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
+body #contact form input[type=submit]:hover {
+  background-color: #1D6154;
+  color: white;
+  cursor: pointer;
 }
-
-#contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-#contact label {
-	margin: 2em 0 1em 0;
-}
-#contact textarea {
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-
-input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
-}
-
-footer nav ul {
-	display: flex;
-	justify-content: flex-end;
-	margin: 2em
-}
-
+body footer nav ul {
+  display: flex;
+  justify-content: flex-end;
+  margin: 2em;
+}/*# sourceMappingURL=style.css.map */
